test/decl.ruse
// fail

func main() int {
    var a int
    var a int = 4 // error
    var b = 4

    {
        var c int
    }
    c // error
}
